# ModelBatchDown

./: .gitignore  ModelBatchDown.spec  README.md  app.py  requirements.txt  run_download.py  run_download.spec  run_download_cli.spec  run_gradio.py  stub_excluded.py  test_download.py  test_gradio.py
.github/workflows/: ci.yml  release.yml
app/: config.py  env_setup.py  main.py
app/downloader/: batch.py
app/platform/: huggingface.py  modelscope.py  router.py
app/utils/: logger.py  logging_config.py  path.py  progress.py  retry.py  shutdown.py
src-tauri/: package-lock.json  package.json
src-tauri/frontend/: index.html
src-tauri/src/: index.html
src-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src-tauri/capabilities/: default.json
src-tauri/src-tauri/src/: api_service.rs  constants.rs  download_core.rs  download_manager.rs  lib.rs  logging.rs  login.rs  main.rs  model_info.rs  network_speed.rs  tasks.rs  wechat_api.rs
src-tauri/src/download-cli/: Cargo.toml
src-tauri/src/download-cli/.github/workflows/: build.yml
src-tauri/src/download-cli/src/: download.rs  main.rs  platform.rs
