[package]
name = "modelbatchdown"
version = "1.0.0"
description = "ModelBatchDown - 模型批量下载器"
authors = ["you"]
edition = "2021"

[lib]
name = "modelbatchdown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
