[package]
name = "modelbatchdown"
version = "1.0.0"
description = "ModelBatchDown - 模型批量下载器"
authors = ["you"]
edition = "2021"

[lib]
name = "modelbatchdown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

# Download related dependencies
hf-hub = { version = "0.5", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex-lite = "0.1"
indicatif = "0.18"

# System monitoring for network speed
sysinfo = "0.31"

# SHA256 checksum
sha2 = "0.10"
