[package]
name = "model-download-cli"
version = "0.1.0"
edition = "2021"
description = "Model downloader for HuggingFace and ModelScope"
authors = ["Your Name"]
license = "MIT"

[[bin]]
name = "model-download"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
anyhow = "1"
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
